
>>VERSION 17.9
* Remade Ulthos from scratch
* Greatly improved Sothoryos
* Greatly improved Ukrainian translation (prod. Octobrine)
* Greatly Improved Far East map, improved biome colors
* Greatly Improved ru & uk lore books (prod. Octobrine)
+ Added new Mossovy, Sothoryos & Ulthos waypoints, achievements, biomes
+ Added new female skins
+ Added more miners, goldsmiths, florists
+ Added Shraik

* Improved stats of ifekevrons and stone men
* Improved summer villages
* Improved spheres of influence
* Improved and unlocked database generator
* Improved Mossovy Sopkas
* Improved King Spears biome
* Improved map (more accurate country borders)
* Improved trade entries

* Recoded lots of NPC: now they can be women
* Recoded biomes: now ArrayLists instead of Arrays needed

* Fixed bug with 2 names
* Fixed bug with one westeros female name
* Fixed bug with Si Qo Gate
* Fixed freeze while F3 in ocean
* Fixed bug with stolen items info
* Fixed bug with russian-speaking Illyrio in english translation

- Removed hunters and greengrocers (no difference, because farmers and butchers exist)
>>VERSION 17.8
+ Added labradorite set of blocks
+ Added "kill mob" type of quests
+ Added "kill player" type of quests
+ Added lots of achievements
+ Added new info about silver weapon
+ Added new ocean types

* Improved Ukrainian, Russian, English translations
* Improved map texture
* Improved mechanics of stone men, their skins
* Improved localization icon texture
* Improved a few armor & weapon textures
* Improved yellow banners' textures
* Improved workbench textures, recipes
* Improved prices for valuable items
* Improved chest contents in all the world
* Improved andesite, rhyolite & basalt sets textures
* Improved Asshai City, improved a few Asshai structures
* Improved Asshai landspcape
* Improved tramp spawning
* Improved sothoryos virus mechanics

* Changed the order of menu icons
* Changed faction colors due to their colors of banner, table, etc.
* Changed werewolf stats